@@ -17,6 +17,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+servver/disease.c: In move symptom() stop processing if victim dies. This
+   prevents access to freed objects.
 server/gods.c: In tailor_god_spell() do not pass NULL value to add_string().
 server/disease.c: In move_symptom() fix possible buffer overflow when creating
    symptom names.
